--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
     <header></header>
     <main></main>
-    <footer></footer>
+    <footer>RJRCH LIM016</footer>
     <script src="index.js" type="module"></script>
   </body>
 </html>
