Edición de página Inicio

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,43 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tarjeta de crédito válida</title>
+    <title>CCS Verify®</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer>RJRCH LIM016</footer>
+    <header>
+      <!--BARRA DE NAVEGACIÓN-->
+      <div class="topnav">
+        <a class="active" href="#home">INICIO</a>
+        <a href="#news">VALIDAR TARJETA</a>
+        <a href="#contact">BLOQUEAR TARJETA</a>
+        <a href="#about">CONTÁCTANOS</a>
+      </div>
+    </header>
+    <main>
+      <!--PANTALLA DE INICIO-->
+      <div class="home-container">
+        <div class="home-content">
+            <hr>
+            <p>Bienvenidos a CCS Verify® </p>
+            <p>Esta compañía se enfoca en ayudar a los usuarios con cualquier tipo de tarjeta de crédito a evitar cualquier tipo de estafas cibernéticas. En esta página podrás bloquear y validar tu tarjeta. Además, podrás contar con una línea totalmente gratuita para poder solicitar ayuda las 24 horas diarias. </p>
+            <hr>
+        </div>
+      </div>
+
+
+
+
+    </main>
+    <footer class="footer">
+      El contenido de esta página web es con fines educativos personales. La idea del proyecto "CCS Verify®" no existe. <br> Lima - Perú | 2021 <br> 
+
+      <a href="https://github.com/RJRCH123"><img class="redSocial" src="./img/icons8-github-30.png" href="https://github.com/RJRCH123" alt="Mi Github"></a> 
+      <a href="mailto:rous9716@gmail.com"><img class="redSocial" src="./img/icons8-gmail-32.png" alt="Mi Gmail"></a> 
+      <a href="https://twitter.com/rouseblues"><img class="redSocial" src="./img/icons8-twitter-30.png" alt="Mi Twitter"></a> 
+      <a href="https://www.linkedin.com/in/rosamaria-rodriguez-6904a1191/"><img class="redSocial" src="./img/icons8-linkedin-30.png" alt="Mi LinkenIn"></a> 
+
+    </footer>
     <script src="index.js" type="module"></script>
   </body>
 </html>
