Edición: Tarjeta Reversa

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                 <div class="firma"><p>Mario Diaz</p></div>
               </div>
               <div class="grupo" id="CCV">
-                <p class="label">ccv</p>
+                <p class="label">CCV</p>
                 <p class="ccv"></p>
               </div>
             </div>
