Edición: Lista Select  Mes y Año

--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
               </div>
             </div>
             <!-- Contenedor de la Leyenda -->
-            <p class="leyenda"> En esta parte se ingresará texto que aun no ha sido definido.En esta parte se ingresará texto que aun no ha sido definido.En esta parte se ingresará texto que aun no ha sido definido.</p>
+            <p class="leyenda"> Los datos a rellenar son confidenciales, además, estarán encriptados. La base de datos no archivará su información personal. Tenga la seguridad que sus datos no se expondrá a manos equívocas.</p>
             <a href="#" class="link-banco">www.tubanco.com</a>
           </div>
         </section> 
