Edición: Texto Inicio + grid gap

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     <!-- Barra de Navegación -->
     <header>
       <button class="BoxNavs" onclick="openPage('Inicio', this,'rgb(10 40 65)')" id="defaultOpen">SOBRE NOSOTROS</button>
-      <button class="BoxNavs" onclick="openPage('ValidarTarjeta', this, 'rgb(45 122 72)')" >VALIDAR TARJETA</button>
-      <button class="BoxNavs" onclick="openPage('BloquearTarjeta', this, 'rgb(163 43 43)')">BLOQUEAR TARJETA</button>
+      <button class="BoxNavs" onclick="openPage('ValidarTarjeta', this,'rgb(10 40 65)')" >VALIDAR TARJETA</button>
+      <button class="BoxNavs" onclick="openPage('BloquearTarjeta', this,'rgb(10 40 65)')">BLOQUEAR TARJETA</button>
       <button class="BoxNavs" onclick="openPage('Contactanos', this, 'rgb(48 129 129)')">CONTÁCTANOS</button>
     </header> 
 
@@ -25,9 +25,9 @@
       </div>
       <div class="BoxInfo">
         <div class="Info">
-          <h2>BANCOS AFILIADOS</h2>
+          <h2>NUESTROS AFILIADOS</h2>
           <h3>¿Quiénes trabajan con BCS Verify®?</h3>
-          <p> Trabajamos con los siguientes bancos a nivel internacional:</p>
+          <p> Trabajamos con las siguientes redes globales de tecnología que garantizan que puedas usar tu tarjeta de crédito o de débito en otros países:</p>
           <img src="./img/Tarjeta/MasterCard.png" alt="MasterCard">
           <img src="./img/Tarjeta/VisaColor.png" alt="Visa">
         </div>
