Edición: Pag. Contáctanos + GifContac + Fixed

--- a/src/index.html
+++ b/src/index.html
@@ -162,11 +162,10 @@
 
     <!-- Página para la información de Contacto --> 
     <main id="Contactanos" class="Box">
-      <img class="GifNav" src="./img/Videos/Contacta.gif" alt="BCS Verify®">
-      <div class="BoxIntro">  
-        <h2>¿Cómo contactarnos?</h2>
-        <p>Para cualquier información puedrás comunicarte con nosotros a traves de la linea telefonica gratuita y en nuestras redes sociales. Atendemos las 24h al dia los 365 dias del año.</p><hr><br>
-      </div>
+      <img class="GifNav" src="./img/Videos/Contacta.gif" alt="BCS Verify®"> <br><br><hr><br>
+      <img class="GifContactanos" src="./img/Videos/Telefono.gif" alt="BCS Verify®">
+      <img class="GifContactanos" src="./img/Videos/Wssp.gif" alt="BCS Verify®">
+      <img class="GifContactanos" src="./img/Videos/RedesSociales.gif" alt="BCS Verify®"> <br><br><hr>
     </main>
 
     <!-- Barra inferior  -->     
