Style: Mejorar semántica del html(section, main, div)

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
     </header> 
 
     <!-- Página de la información sobre la compañía -->
-    <main id="Inicio" class="Box">
+    <main>
+    <section id="Inicio" class="Box">
       <img class="GifNav" src="./img/Videos/Bienvenidos.gif" alt="BCS Verify®">
       <div class="BoxIntro">
         <h2>Bienvenidos a BCS Verify®</h2>
@@ -38,13 +39,13 @@
           Sin embargo, al usar BCS Verify® deberá tener precaución y hacerlo de forma privada, sin personas desconocidas alrededor, para así evitar que alguien pueda observar sus información.</p> 
         </div>
       </div>
-    </main>
+    </section>
     <!-- Página para la Validación de Tarjeta -->  
-    <main id="ValidarTarjeta" class="Box">
+    <section id="ValidarTarjeta" class="Box">
       <img class="GifNav" src="./img/Videos/Valida.gif" alt="BCS Verify®">
       <div class="BoxIntro">
         <h2>¿Cómo validar tu tarjeta?</h2>
-        <p>A continuación llena los datos correspondientes para confirmar si tu tarjeta esta vigente aún. Si aparece como inválida, significa que ya está bloqueada.</p><hr><br>
+        <p>A continuación llena los datos correspondientes para confirmar si tu tarjeta esta vigente aún. Si aparece como inválida, significa que ya está bloqueada.</p><hr>
       </div>
 
       <div class="BoxValidarTarjeta">
@@ -150,24 +151,24 @@
           <button type="submit" class="verificar">Verificar</button>
         </form>
       </div>
-    </main>
+    </section>
       <!-- Página para el Bloqueo de Tarjeta --> 
-    <main id="BloquearTarjeta" class="Box">
+    <section id="BloquearTarjeta" class="Box">
       <img class="GifNav" src="./img/Videos/Bloquea.gif" alt="BCS Verify®">
       <div class="BoxIntro">  
         <h2>¿Cómo bloquear tu tarjeta?</h2>
         <p>Si tienes problemas con tu tarjeta o has sufrido cualquier tipo de robo o estafa, podrás proceder a bloquear tu tarjeta llenando tus datos y dando click en Bloquear Tarjeta. Al terminar, le llegará a su correo la confirmación del bloqueo de Tarjeta.</p><hr><br>
       </div>
-    </main>
+    </section>
 
     <!-- Página para la información de Contacto --> 
-    <main id="Contactanos" class="Box">
+    <section id="Contactanos" class="Box">
       <img class="GifNav" src="./img/Videos/Contacta.gif" alt="BCS Verify®"> <br><br><hr><br>
       <img class="GifContactanos" src="./img/Videos/Telefono.gif" alt="BCS Verify®">
       <img class="GifContactanos" src="./img/Videos/Wssp.gif" alt="BCS Verify®">
       <img class="GifContactanos" src="./img/Videos/RedesSociales.gif" alt="BCS Verify®"> <br><br><hr>
-    </main>
-
+    </section>
+  </main>
     <!-- Barra inferior  -->     
     <footer class="footer">
       El contenido de esta página web es con fines educativos personales. La idea del proyecto "CCS Verify®" no existe. <br> Lima - Perú | 2021 <br> 
