Feat: Funcion tipo marca y numero de Tarjeta en la imagen.

--- a/src/index.html
+++ b/src/index.html
@@ -55,9 +55,7 @@
           <!-- Parte delantera de la Tarjeta -->
           <div class="Delantera">
             <!-- Logo del banco -->
-            <div class="Tipo-logo">
-              <img src="./img/Tarjeta/Visa.png" alt="Visa">
-            </div>
+            <div class="Tipo-Marca" id="Tipo-Marca"></div>
             <!-- Imagen del chip -->
             <img src="./img/Tarjeta/chip-tarjeta.png" class="Chip" alt="Chip">
             <!-- Contenedor de los Datos -->
@@ -65,14 +63,14 @@
 
               <div class="grupo" id="Numero">
                 <p class="label">Número Trajeta</p>
-                <p class="numero">#### #### #### ####</p>
+                <p class="numero" id="numero" >#### #### #### ####</p>
               </div>
 
               <div class="flexbox">
 
                 <div class="grupo" id="Nombre">
                   <p class="label">Nombre y Apellido</p>
-                  <p class="nombre">Mario Diaz</p>
+                  <p class="nombre" id="numero">Mario Diaz</p>
                 </div>
 
                 <div class="grupo" id="Expiracion">
