Feat: Funciones para Inputs nombre, fecha, mes, firma

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
 
                 <div class="grupo" id="Nombre">
                   <p class="label">Nombre y Apellido</p>
-                  <p class="nombre" id="numero">Mario Diaz</p>
+                  <p class="nombre" id="nombre">Mario Diaz</p>
                 </div>
 
                 <div class="grupo" id="Expiracion">
@@ -89,11 +89,11 @@
             <div class="Datos">
               <div class="grupo" id="Firma">
                 <p class="label">Firma</p>
-                <div class="firma"><p>Mario Diaz</p></div>
+                <div class="firma" id="firma"><p>Mario Diaz</p></div>
               </div>
               <div class="grupo" id="CCV">
                 <p class="label">CCV</p>
-                <p class="ccv"></p>
+                <p class="ccv" id="cvv"></p>
               </div>
             </div>
             <!-- Contenedor de la Leyenda -->
@@ -128,7 +128,7 @@
               <div class="flexbox">
                 <!-- Grupo Input Expiración -->
                 <div class="grupoSeleccionable">
-                  <select name="mes" id="SelecionarMes">
+                  <select name="Mes" id="SelecionarMes">
                     <option disabled selected>Mes</option>
                   </select>
                 </div>
