Refactor: Pag. Contáctanos + CSS

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <img class="GifNav" src="./img/Videos/Bienvenidos.gif" alt="BCS Verify®">
       <div class="BoxIntro">
         <h2>Bienvenidos a BCS Verify®</h2>
-        <p>Esta compañía se enfoca en ayudar a los usuarios con cualquier tipo de tarjeta de crédito para evitar cualquier tipo de estafas. <strong>En esta página podrás bloquear y validar tu tarjeta desde cualquier ordenador.</strong> Además, podrás contar con una línea totalmente gratuita para poder solicitar ayuda las 24 horas diarias.</p><hr><br>
+        <p>Esta compañía se enfoca en ayudar a los usuarios con cualquier tipo de tarjeta de crédito para evitar cualquier tipo de estafas. <strong>En esta página podrás bloquear y validar tu tarjeta desde cualquier ordenador o dispositivo móvil.</strong> Además, podrás contar con una línea totalmente gratuita para poder solicitar ayuda las 24 horas diarias.</p><hr><br>
       </div>
       <div class="BoxInfo">
         <div class="Info">
@@ -37,7 +37,7 @@
           
         </div>
         <div class="Info">
-          <h2>SEGURIDAD</h2>
+          <h2>NUESTRA SEGURIDAD</h2>
           <h3>¿Existe riesgo al usar BCS Verify®?</h3>
           <p>Bank Card Security Verify® le brinda total confidencialidad en cualquier ordenador. Contamos con un sistema de seguridad de alta gama y tenemos el respaldo de nuestros afiliados. La base de datos no archivará su información personal. Tenga la seguridad que sus información no se expondrán a manos equívocas. <br><br>
           Sin embargo, al usar BCS Verify® deberá tener precaución y hacerlo de forma privada, sin personas desconocidas alrededor, para así evitar que alguien pueda observar sus información.</p> 
@@ -154,13 +154,7 @@
           <!-- <button  type="reset" id="NuevaVerificacion" style="display: none">Nueva validación</button> -->
 
         </form>
-      </div><br><br>
-      <div class="alert-container" style="display: none">
-        <div class="alert-p">
-          <p class="valid">La Tarjeta es válida ✔️</p>
-          <p class="no-valid">La Tarjeta no es válida ❌</p>
-        </div>
-      </div>  
+      </div><br><br>  
 
     </section>
       <!-- Página para el Bloqueo de Tarjeta --> 
@@ -174,10 +168,11 @@
 
     <!-- Página para la información de Contacto --> 
     <section id="Contactanos" class="Box">
-      <img class="GifNav" src="./img/Videos/Contacta.gif" alt="BCS Verify®"> <br><br><hr><br>
-      <img class="GifContactanos" src="./img/Videos/Telefono.gif" alt="BCS Verify®">
+      <img class="GifNav" src="./img/Videos/Contacta.gif" alt="BCS Verify®"> 
+      <img  class="GifContacPag" src="./img/Videos/GifdetodoContactos.gif" alt="Contáctanos | BCS Verify®">
+      <!--<img class="GifContactanos" src="./img/Videos/Telefono.gif" alt="BCS Verify®">
       <img class="GifContactanos" src="./img/Videos/Wssp.gif" alt="BCS Verify®">
-      <img class="GifContactanos" src="./img/Videos/RedesSociales.gif" alt="BCS Verify®"> <br><br><hr>
+      <img class="GifContactanos" src="./img/Videos/RedesSociales.gif" alt="BCS Verify®"> <br><br><hr> -->
     </section>
   </main>
     <!-- Barra inferior  -->     
