Feat: Función isvalid y maskify + alertas

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
       <img class="GifNav" src="./img/Videos/Valida.gif" alt="BCS Verify®">
       <div class="BoxIntro">
         <h2>¿Cómo validar tu tarjeta?</h2>
-        <p>A continuación llene los datos correspondientes para confirmar si su tarjeta está vigente aún. Si aparece como inválida, significa que ya está bloqueada.<strong> PRECAUCIÓN:</strong> Debido a tener los datos expuestos en pantalla, podrá esconderla tantas veces sea necesaria, solamente deberá dar click al botón circular.</p><hr>
+        <p>A continuación llene los datos correspondientes para confirmar si su tarjeta está vigente aún. Si aparece como inválida, significa que ya está bloqueada.<strong> PRECAUCIÓN:</strong> Debido a tener los datos expuestos en pantalla podrá esconderla, tantas veces sea necesaria, solamente deberá dar click al botón circular.</p><hr>
       </div><br><br>
 
       <div class="BoxValidarTarjeta">
@@ -169,7 +169,7 @@
         <form action="" class="formularioBloquear" id="FormularioBloquear">
           <div class="grupo">
             <label for="InputNumero">Número de Tarjeta</label>
-            <input type="text" name="" class="InputNumero" id="InputNumero" maxlength="19" autocomplete="off">
+            <input type="text" name="" class="InputNumero" id="InputNumeroB" maxlength="19" autocomplete="off">
           </div>
 
           <div class="grupo">
