--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@
 
           <div class="grupo">
             <label for="InputNombre">Nombre y Apellido</label>
-            <input type="text" name="InputsB" id="InputNombre" maxlength="40" autocomplete="off">
+            <input type="text" name="InputsB" id="InputNombreB" maxlength="40" autocomplete="off">
           </div>
 
           <div class="grupo">
