--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
           <div class="grupo">
             <label for="InputNumero">Número de Tarjeta</label>
             <input type="password"  class="InputNumero" id="InputNumero" maxlength="19" autocomplete="off" required>
+            <span id="recordatorio"></span><br>
           </div>
 
           <div class="grupo">
