Text: Modificacion del Footer

--- a/src/index.html
+++ b/src/index.html
@@ -170,7 +170,7 @@
             <input type="password" name="InputsB" class="InputNumero" id="InputNumeroB" maxlength="19" autocomplete="off" required>
           </div>
           <div> 
-            <img onclick="mostrarNumero()"src="./img/signos/ojo.png" alt="Mostrar">
+            <img onclick="mostrarNumero()" src="./img/signos/ojo.png" alt="Mostrar">
           </div>
 
           <div class="grupo">
@@ -195,7 +195,7 @@
   </main>
     <!-- Barra inferior  -->     
     <footer class="footer">
-      El contenido de esta página web es con fines educativos personales. La idea del proyecto "CCS Verify®" no existe. <br> Lima - Perú | 2021 <br> 
+      El contenido de esta página web es con fines educativos personales. La idea del proyecto "BCS Verify®" no existe. Mis redes sociales:<br> Lima - Perú | 2021 <br> 
 
       <a href="https://github.com/RJRCH123"><img src="./img/Redes sociales/icons8-github-30.png" href="https://github.com/RJRCH123" class="redSocial" alt="Mi Github"></a> 
       <a href="mailto:rous9716@gmail.com"><img src="./img/Redes sociales/icons8-gmail-32.png" class="redSocial" alt="Mi Gmail"></a> 
