Text: Redacción de alertas + Footer

--- a/src/index.html
+++ b/src/index.html
@@ -179,8 +179,8 @@
           </div>
 
           <div class="grupo">
-            <label for="InputCorreo">Correo Electrónico</label>
-            <input type="text" name="InputsB" id="InputCorreo" maxlength="30" autocomplete="off" required>
+            <label for="email">Correo Electrónico</label>
+            <input type="email" name="InputsB" id="InputCorreo" maxlength="30" autocomplete="off" required>
           </div>
           <button type="submit"  id="Bloquear" class="bloquear" onclick="ContenidoInputTarjetaB()">Bloquear</button>
         </form>
